--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -19,7 +19,7 @@ phases:
       - echo "Building Docker image..."
       - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
       - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/my-proj-app:latest" .
-      - docker push "docker.io/$DOCKER_REGISTRY_USERNAME/$my-proj-applatest"
+      - docker push "docker.io/$DOCKER_REGISTRY_USERNAME/$my-proj-app:latest"
   post_build:
     commands:
       - echo "Build completed successfully!"
